# web-scraping

./: .gitignore  00_run_pipeline_job.py  Dockerfile  README.md  Teste Amazom Tio Sam.py  Web Scraping Amazom oficial.py  Web scraping Magalu.py  config.py  main.py  master_changes.patch  ofertas_amazon.xlsx  pyproject.toml  requirements.txt  ruff.toml  run.py  run_pipeline.py  setup.py  startup.sh  tv = 12000.py
.github/workflows/: ci-pipeline.yml
KPI_BI/: README.md
PowerBI_Dashboard/: Medidas_DAX.txt  README_PowerBI.md
notebooks/: 01_main_pipeline.py  benchmarking_orchestration.py
src/: __init__.py  config.py  data_processing.py  data_processor.py  emailer.py  embeddings.py  extraction.py  logger_config.py  main.py  matching.py  reporting.py  scraping.py
src/config/: __init__.py  settings.py
src/scraping/: __init__.py  scraper.py
tests/: __init__.py  test_data_processing.py  test_embeddings.py  test_reporting.py  test_scraper.py  test_scraping.py
web-scraping-main/: Web scraping Mercado livre teste.py  from selenium import webdriver.py  new  pyproject.toml  scraping temu teste.py  teste.py
web-scraping-main/.github/workflows/: ci-pipeline.yml
web-scraping-main/src/: logger_config.py  reporting.py
web-scraping-main/src/config/: settings.py
web-scraping-main/src/logger/: __init__.py
